2006-03-18  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONRestoreMemMapRegisters),
	(RADEONRestoreCrtcRegisters), (RADEONRestoreCrtc2Registers):
	* src/radeon_reg.h:
	Clear the offsets when updating the memory map instead of when
	enabling the CRTCs and try to make that code more reliable. Doesn't
	disable the CRTCs beforehand.

2006-03-18  Roland Scheidegger  <rscheidegger_lists@hispeed.ch>
	* src/radeon_dri.c: (RADEONDRIGetVersion)
	* src/radeon_driver.c: (RADEONGetAccessibleVRAM):
	* man/radeon_reg.h:
	* src/radeon_video.c:
	Fix various small cosmetic issues. Change a driver message, get the order
	right for requesting drm versions, replace the use of some numbers with
	the respective macro defines in radeon_video.c, and add some more macro
	defines. None of that really matters.

2006-03-17  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONGetAccessibleVRAM),
	(RADEONPreInitVRAM):
	Add missing return statement (the driver would not start randomly),
	add RV410 to the list of new generation cards for the memory map
	setup and fix a bogus message.

2006-03-16  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONInitCrtcRegisters),
	(RADEONInitCrtc2Registers), (RADEONDoAdjustFrame):
	Fix incorrect CRTC2_OFFSET values when using old-style dual head (not
	MergedFB). Fixes Xinerama for me.

2006-03-16  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONWaitForVerticalSync),
	(RADEONWaitForVerticalSync2), (RADEONLoadPalette),
	(RADEONScreenInit), (RADEONRestoreMemMapRegisters),
	(RADEONRestoreCrtcRegisters), (RADEONRestoreCrtc2Registers),
	(RADEONDoAdjustFrame), (RADEONCloseScreen):
	* src/radeon_reg.h:
	Add various workarounds that seem to fix some remaning lockup
	scenarios I'm experiencing with the driver when setting the memory
	map. Some of the magic delays are a bit dodgy but they seem to work, I